--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="zDP-nx-g0F" style="IBUITableViewCellStyleDefault" id="KGH-Bg-wLh">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="zDP-nx-g0F" style="IBUITableViewCellStyleDefault" id="KGH-Bg-wLh">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGH-Bg-wLh" id="Eq8-Md-Gbp">
@@ -50,9 +50,20 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="our-VQ-hKe">
-                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="JST-aA-Vbj"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dSW-0g-EFr"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="JST-aA-Vbj">
+                            <connections>
+                                <action selector="tapEditButton:" destination="BYZ-38-t0r" id="a09-xx-Ynx"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dSW-0g-EFr">
+                            <connections>
+                                <action selector="tapAddButton:" destination="BYZ-38-t0r" id="Abb-4D-YLn"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="vkt-Qk-T7C" id="Igt-Gj-Jgp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
